--- a/web/resources/common/formLog.html
+++ b/web/resources/common/formLog.html
@@ -1,7 +1,15 @@
-<table id="log">   
-    <form:form commandName="user">  
-        <tr><td><p><label for=email>Email: </label></p></td><td><form:input path="email" id="email" type="text" value="email"/></td><td><p hidden="true" class="error" id="mail_err">Non hai inserito la mail!</p></td></tr>
-        <tr><td><p><label for=user>Password: </label> </p></td><td><form:input path="pwd" id="pwd" type="password" value="password"/><td><p hidden="true" class="error" id="pwd_err">Non hai inserito la password!</p></td></td></tr>
-        <tr><td><input class="button" type="button" onclick="doAjaxPost()" value="Accedi"><td><a class="button" href="addUser.htm">Iscriviti!</a></td></tr>
-    </form:form>
-</table>
+
+
+<form:form id="log" commandName="user"> 
+    <fieldset>
+        <legend>Dettagli utente:</legend>  
+        <ul>
+            <li><label for=email>Email: </label><form:input path="email" id="email" type="text" value="email"/><p hidden="true" class="error" id="mail_err">Non hai inserito la mail!</p></li>
+            <li><label for=user>Password: </label><form:input path="pwd" id="pwd" type="password" value="password"/><p hidden="true" class="error" id="pwd_err">Non hai inserito la password!</p></li>
+        </ul>
+    </fieldset>
+    <fieldset>
+        <input class="button" type="button" onclick="doAjaxPost();" value="Accedi"><a class="button" href="addUser.htm">Iscriviti!</a>
+    </fieldset>
+</form:form>
+
